# cmake_demo

demo4/: CMakeLists.txt
demo4/main/: CMakeLists.txt  main.c
demo4/test/: CMakeLists.txt  test.c  test.h
